deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
spec:
  selector:
      matchLabels:
        app: hello-app
  replicas: 3
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
        - name: hello-app
          image: abhinavtiwary/poc-testk8s
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
